--- a/prevalencia.html
+++ b/prevalencia.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="content5 cid-saJdlZIQTk" id="content5-9b">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="content5 cid-saJdlZIQTk" id="content5-9b">
     
     <div class="container">
         <div class="row justify-content-center">
@@ -71,8 +71,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#si2Ob9PhNe-modal">
-                    <img class="w-100" src="assets/images/2743853-1-506x506.png" alt="" data-slide-to="0" data-target="#lb-si2Ob9PhNe">
+                <div class="item-wrapper" data-toggle="modal" data-target="#si34EsKAP5-modal">
+                    <img class="w-100" src="assets/images/2743853-1-506x506.png" alt="" data-slide-to="0" data-target="#lb-si34EsKAP5">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -80,8 +80,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>FALLECIDOS</strong><br>31,938</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#si2Ob9PhNe-modal">
-                    <img class="w-100" src="assets/images/82415-506x506.png" alt="" data-slide-to="1" data-target="#lb-si2Ob9PhNe">
+                <div class="item-wrapper" data-toggle="modal" data-target="#si34EsKAP5-modal">
+                    <img class="w-100" src="assets/images/82415-506x506.png" alt="" data-slide-to="1" data-target="#lb-si34EsKAP5">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -89,8 +89,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>LETALIDAD</strong><br>4.05%</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#si2Ob9PhNe-modal">
-                    <img class="w-100" src="assets/images/3150472-506x506.png" alt="" data-slide-to="2" data-target="#lb-si2Ob9PhNe">
+                <div class="item-wrapper" data-toggle="modal" data-target="#si34EsKAP5-modal">
+                    <img class="w-100" src="assets/images/3150472-506x506.png" alt="" data-slide-to="2" data-target="#lb-si34EsKAP5">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -98,8 +98,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>PCR(+)</strong><br>181,745</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#si2Ob9PhNe-modal">
-                    <img class="w-100" src="assets/images/125016-506x506.png" alt="" data-slide-to="3" data-target="#lb-si2Ob9PhNe">
+                <div class="item-wrapper" data-toggle="modal" data-target="#si34EsKAP5-modal">
+                    <img class="w-100" src="assets/images/125016-506x506.png" alt="" data-slide-to="3" data-target="#lb-si34EsKAP5">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -108,11 +108,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="si2Ob9PhNe-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="si34EsKAP5-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-si2Ob9PhNe" data-interval="5000">
+                        <div class="carousel slide" id="lb-si34EsKAP5" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/2743853-1-506x506.png" alt="">
@@ -128,18 +128,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-si2Ob9PhNe"></li>
-                                <li data-slide-to="1" data-target="#lb-si2Ob9PhNe"></li>
-                                <li data-slide-to="2" data-target="#lb-si2Ob9PhNe"></li>
-                                <li data-slide-to="3" data-target="#lb-si2Ob9PhNe"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-si34EsKAP5"></li>
+                                <li data-slide-to="1" data-target="#lb-si34EsKAP5"></li>
+                                <li data-slide-to="2" data-target="#lb-si34EsKAP5"></li>
+                                <li data-slide-to="3" data-target="#lb-si34EsKAP5"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-si2Ob9PhNe">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-si34EsKAP5">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-si2Ob9PhNe">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-si34EsKAP5">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -232,7 +232,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">
-                            Entregables</a><div class="dropdown-menu"><a class="text-white text-primary dropdown-item display-4" href="entregables.html" aria-expanded="false">Presentación</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 1-2-3</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Entregable 1</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 2</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Social</a><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Económico</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Descripción del<br> problema</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Problema<br>definido</a><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Prevalencia<br>e incidencia</a></div></div></div></div><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Entregable 3</a></div></div><a class="text-white text-primary dropdown-item display-4" href="hito1.html" aria-expanded="false">Hito 1</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 5-6-7</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 5</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="entregable5.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="lista_materiales.html" aria-expanded="false">Materiales</a></div></div><a class="text-white text-primary dropdown-item display-4" href="entregable6.html" aria-expanded="false">Entregable 6</a><a class="text-white text-primary dropdown-item display-4" href="entregable7.html" aria-expanded="false">Entregable 7</a></div></div><a class="text-white text-primary dropdown-item display-4" href="hito2.html" aria-expanded="false">Hito 2</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 9-11</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="entregable9.html" aria-expanded="false">Entregable 9</a><a class="text-white text-primary dropdown-item display-4" href="page18.html" aria-expanded="false">Entregable 10</a><a class="text-white text-primary dropdown-item display-4" href="page19.html" aria-expanded="false">Entregable 11</a></div></div></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="nosotros.html">Nosotros</a></li>
+                            Entregables</a><div class="dropdown-menu"><a class="text-white text-primary dropdown-item display-4" href="entregables.html" aria-expanded="false">Presentación</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 1-2-3</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Entregable 1</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 2</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Social</a><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Económico</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Descripción del<br> problema</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Problema<br>definido</a><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Prevalencia<br>e incidencia</a></div></div></div></div><a class="text-white text-primary dropdown-item display-4" href="nosotros.html" aria-expanded="false">Entregable 3</a></div></div><a class="text-white text-primary dropdown-item display-4" href="hito1.html" aria-expanded="false">Hito 1</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 5-6-7</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 5</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="entregable5.html" aria-expanded="false">Presentación</a><a class="text-white text-primary dropdown-item display-4" href="lista_materiales.html" aria-expanded="false">Materiales</a></div></div><a class="text-white text-primary dropdown-item display-4" href="entregable6.html" aria-expanded="false">Entregable 6</a><a class="text-white text-primary dropdown-item display-4" href="entregable7.html" aria-expanded="false">Entregable 7</a></div></div><a class="text-white text-primary dropdown-item display-4" href="hito2.html" aria-expanded="false">Hito 2</a><div class="dropdown"><a class="text-white text-primary dropdown-item dropdown-toggle display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Entregable 9-11</a><div class="dropdown-menu dropdown-submenu"><a class="text-white text-primary dropdown-item display-4" href="entregable9.html" aria-expanded="false">Entregable 9</a><a class="text-white text-primary dropdown-item display-4" href="page18.html" aria-expanded="false">Entregable 10</a><a class="text-white text-primary dropdown-item display-4" href="page19.html" aria-expanded="false">Entregable 11</a></div></div><a class="text-white text-primary dropdown-item display-4" href="entregable12.html" aria-expanded="true">Entregable 12</a></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="caso_clinico.html">
                             Caso clínico</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="informacion_general.html" aria-expanded="false">
                             Información general</a></li></ul>
