--- a/entregable12.html
+++ b/entregable12.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header2 cid-si34kQyYhY mbr-fullscreen mbr-parallax-background" id="header2-hb">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header2 cid-si34kQyYhY mbr-fullscreen mbr-parallax-background" id="header2-hb">
 
     
 
@@ -262,7 +262,35 @@
                 <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
                     <strong>Avance en las entrevistas</strong></h3>
                 
-                <p class="mbr-text mbr-fonts-style display-7">Se avanzó con las entrevistas, elaborando preguntas específicas para cada</p>
+                <p class="mbr-text mbr-fonts-style display-7">Se avanzó con las entrevistas, elaborando preguntas específicas para cada grupo de usuarios. Las preguntas consideradas son las siguientes:<br><br>Usuarios:
+<br>-¿Qué tipo de tela le parecería la adecuada para un dispositivo de esta naturaleza?
+<br>-¿Le parece que el dispositivo sería cómodo de usar? (considerando sus especificaciones técnicas?
+<br>¿cuánto estaría dispuesto a pagar por este dispositivo?
+<br>-¿Qué podríamos mejorar? 
+<br>-¿Considera que es importante la implementación de la sección "consejos" en la aplicación?, ¿Cómo influye el estado de ánimo de los pacientes asintomáticos?
+<br>-¿Le parece que la aplicación es amigable con diferentes tipos de personas?
+<br>
+<br>Ingenieros:<br>-¿Cree que sea posible mejorar el dispositivo? ¿En qué aspecto?
+<br>-¿Considera que el diseño de la banda es el adecuado? ¿Le parece ergonómico?
+<br>-¿Cree que es un producto viable en el mercado peruano?
+<br>-¿Le parece que la aplicación ha sido desarrollada en el entorno adecuado? De no ser así, ¿en cuál nos recomendaría?
+<br>
+<br>Personal de Salud 
+<br>-¿Cree que la salud mental del paciente puede verse afectada?
+<br>-¿Considera que la elección de los signos vitales a medir es la adecuada para monitorear el estado de un paciente asintomático?
+<br>-¿Considerados con los datos almacenados en la aplicación serían de alta fiabilidad?
+<br>-¿Lo recomendaría en el centro de salud que labora?
+<br>- ¿Cree que se le pueda añadir una función más al dispositivo?
+<br><br>Pacientes
+<br>-¿Ya ha tenido covid?¿Le hubiera gustado usar el dispositivo durante la enfermedad? 
+<br>-¿Se sentiría cómodo usándolo? 
+<br>-¿Lo usaría todo el día?
+<br>-¿Comprende el proceso del uso de la aplicación? 
+<br>-¿Le molestaría recibir notificaciones de esta aplicación?
+<br>-¿Cada cuanto tiempo le gustaría saber sobre sus mediciones?
+<br>-¿Qué tanto estaría dispuesto a pagar por este dispositivo?
+<br>
+<br></p>
             </div>
         </div>
     </div>
